UT5/Proyecto Array 2D AL/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\Java\jdk1.8.0_60\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;F:\DAW1\programacion\UT5\Proyecto Array 2D AL
-d
F:\DAW1\programacion\UT5\Proyecto Array 2D AL\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
F:\DAW1\programacion\UT5\Proyecto Array 2D AL\Array2D.java
<---- end of javadoc command ---->
Loading source file F:\DAW1\programacion\UT5\Proyecto Array 2D AL\Array2D.java...
F:\DAW1\programacion\UT5\Proyecto Array 2D AL\Array2D.java:292: error: not a statement
        Arrays2d
        ^
F:\DAW1\programacion\UT5\Proyecto Array 2D AL\Array2D.java:292: error: ';' expected
        Arrays2d
                ^
2 errors
